# midas2nptool

./: .gitignore  .travis.yml  CMakeLists.txt  ClassList.txt  README.md  RunToTreat.txt  Show.cxx  midas2nptool.cxx  midas2nptool.sh  t40.txt  t40_lowgain.txt  test.txt
Core/: .gitignore  CMakeLists.txt  M2NConfigurationManager.cxx  M2NConfigurationManager.h  M2NDetectorFactory.cxx  M2NDetectorFactory.h  M2NDetectorManager.cxx  M2NDetectorManager.h  M2NMidasInput.cxx  M2NMidasInput.h  M2NRootOutput.cxx  M2NRootOutput.h  M2NVDetector.cxx  M2NVDetector.h  M2NVersion.h.in
Detectors/: CMakeLists.txt  M2NFpdTAMU.cxx  M2NFpdTAMU.h  M2NGeTAMU.cxx  M2NGeTAMU.h  M2NTiara.cxx  M2NTiara.h
Utility/: CMakeLists.txt  m2n_installer.cxx
ressources/CMake/: Root.cmake
sample/: R40_0  R41_0  R61_0
scripts/: m2n_folder.sh  post_install.cmake
